change colors and fonts

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,10 +1,12 @@
 // Variables
 
 // Main color
-$primary-color: #000;
+// $primary-color: #000;
+$primary-color: #111212;
 
 // Anchor color
-$secondary-color: #00cdff;
+$secondary-color: #1aadad;
+// $secondary-color: #00cdff;
 
 // Font color
 $font-color: #fff;
