Add social buttons

--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -4,6 +4,9 @@
 @import "variables";
 @import "mixins";
 
+@import "../scss/fontawesome.scss";
+@import "../scss/brands.scss";
+
 /*!
  * Start Bootstrap - Grayscale Bootstrap Theme (http://startbootstrap.com)
  * Code licensed under the Apache License v2.0.
