--- a/_includes/expertise.html
+++ b/_includes/expertise.html
@@ -1,3 +1,5 @@
-<section id="{{ page.section-type }}" class="container content-section text-center">
+<section id="{{ page.section-type }}" class="container content-section text-left">
+  <div class="col-sm-6 col-sm-offset-3">  
   {{ page.content | markdownify }}
+  </div>
 </section>
