--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,17 @@
   <meta name="description" content="{{site.description}}">
   <meta name="author" content="{{site.author}}">
   <meta name="keywords" content="{{site.keywords}}">
+  
+  <meta name="thumbnail" content="{{site.me-img}}" />
+
+  <!-- facebook meta -->
+  <!-- <meta property="og:site_name" content="Your Website Name Here"/>
+  <meta property="og:title" content="Your awesome title goes here, about 90 characters in length."/> -->
+  <meta property="og:description" content="Koen Bal"/>
+  <meta property="og:image" content="{{site.me-img}}">
+  <!-- <meta property="og:url" content="http://yourcontentURLgoeshere.com/"> -->
+  <meta property="og:type" content="personal website"/>
+  
   <link rel="canonical" href="{{page.url | replace:'index.html','' | prepend: site.baseurl}}">
   <title>{{site.title}}{% if page.title %} | {{page.title}}{% endif %}</title>
 
